# qwen3-vl-embedding

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: docker-compose.yaml
openspec/changes/archive/2025-02-27-support-aliyun-official-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-02-27-support-aliyun-official-api/specs/aliyun-api-client/: spec.md
openspec/changes/archive/2025-02-27-support-aliyun-official-api/specs/aliyun-langchain-integration/: spec.md
openspec/changes/archive/2025-02-27-support-aliyun-official-api/specs/aliyun-llamaindex-integration/: spec.md
src/qwen3_vl_embedding/: __init__.py  aliyun_client.py  client.py  types.py
src/qwen3_vl_embedding/langchain/: __init__.py  aliyun_embeddings.py  qwen3_vl_embedding.py  qwen3_vl_reranker.py
src/qwen3_vl_embedding/llama_index/: __init__.py  aliyun_embedding.py  qwen3_vl_embedding.py  qwen3_vl_reranker.py
src/qwen3_vl_embedding/tests/: .env.example  conftest.py  test_aliyun_client.py  test_aliyun_langchain.py  test_aliyun_llamaindex.py  test_langchain.py  test_llamaindex.py
