[project]
name = "qwen3-vl-embedding"
version = "0.1.0"
description = "A Python integration library for Qwen3 VL model, providing unified HTTPx clients and multi-framework support (LlamaIndex / LangChain) with text and multimodal (image) embedding and reranking capabilities."
readme = "README.md"
authors = [
    { name = "Alex Sun", email = "1006925066@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.11.0",
]

[project.optional-dependencies]
llama-index = [
    "llama-index-core>=0.14.0",
]
langchain = [
    "langchain-core>=1.0.0",
]
cli = [
    "lancedb>=0.27.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
